--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,54 @@
-
-
-version: "3"
+networks:
+  selenium-network:
+    external: true
 services:
   selenium-hub:
     image: selenium/hub:4.13.0
+    container_name: selenium-hub
     ports:
       - "4444:4444"
+    networks:
+      - selenium-network
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:4444/status || exit 0" ]
+      interval: 5s
+      timeout: 5s
+      retries: 12
+
   chrome:
     image: selenium/node-chrome:4.13.0
+    container_name: chrome-node
     depends_on:
-      - selenium-hub
+      selenium-hub:
+        condition: service_healthy
+    networks:
+      - selenium-network
     environment:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSIONS=5
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+    shm_size: "2g"
+    # Optional VNC for visual debugging
+    ports:
+      - "5900:5900"
+
   firefox:
     image: selenium/node-firefox:4.13.0
+    container_name: firefox-node
     depends_on:
-      - selenium-hub
+      selenium-hub:
+        condition: service_healthy
+    networks:
+      - selenium-network
     environment:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSIONS=5
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+    shm_size: "2g"
+    # Optional VNC for visual debugging
+    ports:
+      - "5901:5900"
